# pbos-kernel

./: CMakeLists.txt
arch/: CMakeLists.txt
arch/i386/: CMakeLists.txt  atomic.h  cpuid.c  cpuid.h  gate.h  int.c  int.h  kargs.h  misc.S  misc.h  mlayout.h  paging.h  port.h  reg.h  seg.h  tss.h
arch/i386/asm/: mm.h
arch/i386/debug/: bochs.h
cmake/platform/: i386-pc-pbkim.cmake
hal/: CMakeLists.txt
hal/i386/: CMakeLists.txt  debug.h  init.c  initcar.h  irq.h  logger.h  mm.h  proc.h  syscall.c  syscall.h
hal/i386/boot/: CMakeLists.txt  bootldr.lds  error.c  error.h  init.S  kloader.c  kloader.h  main.c  mb.c  mb.h  misc.h
hal/i386/dbg/: stacktrace.S
hal/i386/display/: vga.c  vga.h
hal/i386/exec/: init.c
hal/i386/initcar/: fileio.c  init.c
hal/i386/irq/: CMakeLists.txt  exception.S  init.c  misc.c  syscall.S
hal/i386/logger/: logger.c
hal/i386/misc/: panic.S  panic.c
hal/i386/mm/: CMakeLists.txt  context.c  init.c  misc.c  misc.h
hal/i386/mm/kima/: base.h  init.c  init.h  malloc.c  malloc.h  ublk.c  ublk.h  vmalloc.c  vmalloc.h  vpgdesc.c  vpgdesc.h
hal/i386/mm/pgalloc/: find.c  pgalloc.c  pgalloc.h
hal/i386/mm/vmmgr/: vm.c  vm.h
hal/i386/proc/: context.S  context.c  init.c  proc.c  thread.c
hal/i386/syscall/: pbcore.clt  pbcore.h
include/pbos/: attribs.h  common.h  utils.h
include/pbos/fs/: file.h  fs.h
include/pbos/hal/: init.h  irq.h  misc.h
include/pbos/kf/: allocator.h  hash.h  hashmap.h  list.h  rbtree.h  spinlock.h  string.h  uuid.h
include/pbos/km/: assert.h  exec.h  logger.h  mm.h  objmgr.h  panic.h  proc.h  result.h  storage.h  symbol.h
include/pbos/kn/fs/: file.h  fs.h  initcar.h  rootfs.h
include/pbos/kn/km/: exec.h  mm.h  objmgr.h  proc.h  symbol.h
include/pbos/kn/se/: perm.h  user.h
include/pbos/pm/: acpi.h  apm.h
include/pbos/se/: file.h  proc.h  user.h
kernel/: CMakeLists.txt  init.c  main.c
kernel/exec/: CMakeLists.txt  exec.c
kernel/exec/loader/i386/elf/: elf.c
kernel/fs/: CMakeLists.txt  file.c  fs.c  rootfs.c
kernel/kf/: CMakeLists.txt  hash.c  hashmap.c  rbtree.c  spinlock.c  string.c
kernel/km/: objmgr.c
scripts/ld/i386/: kernel.lds
