find_package(PbOSCommon REQUIRED)

file(GLOB SRC *.h *.c *.S)
target_sources(hal PRIVATE ${SRC})
target_include_directories(hal SYSTEM BEFORE PRIVATE ${FreeSTDC_INCLUDE_DIR})
add_dependencies(hal pbarch freestdc)
target_link_libraries(hal pbarch freestdc)

add_subdirectory("boot")
# add_subdirectory("dbg")
add_subdirectory("display")
add_subdirectory("exec")
add_subdirectory("initcar")
add_subdirectory("irq")
add_subdirectory("logger")
add_subdirectory("misc")
add_subdirectory("mm")
add_subdirectory("proc")
